refactor: actualizar los tipos de respuesta en los controladores y corregir las relaciones entre entidades